# Company_Strength_indicator

./: agent.py  capability_stack_presentation.tex  config.py  fusion.py  schema.py
capability_stack_agent/: .env.example  .gitignore  check_esg_schema.py  data_contract.py  layer1_deterministic.py  layer2_llm.py  pyproject.toml
capability_stack_agent/retrieval/: embedder.py  filing_resolver.py  hybrid_search.py  rrf.py
capability_stack_agent/tests/: test_fusion.py
company_environment_agent/agent7/: .env.example  README.md  cli.py  pyproject.toml
company_environment_agent/agent7/agent/: chat.py  run.py
company_environment_agent/agent7/config/: commodity_sensitivity.yaml  environmental_exposure.yaml  legal_regulatory_burden.yaml  political_exposure.yaml  regime_thresholds.yaml  sector_etf_map.yaml  sector_margin_metric.yaml  tech_disruption.yaml
company_environment_agent/agent7/db/: connection.py  schema.sql
company_environment_agent/agent7/ingestion/: fundamentals_ingest.py  ohlcv_ingest.py  risk_factors_ingest.py
company_environment_agent/agent7/layer1/: alpha_beta.py  bundle.py  commodity.py  data_loader.py  flags.py  peer_gaps.py  regimes.py  relative_strength.py  returns.py
company_environment_agent/agent7/layer2/: llm_interpreter.py  prompts.py  risk_factor_retrieval.py  tavily_client.py  tavily_pestel.py  ten_k_retrieval.py
company_environment_agent/agent7/scoring/: final_score.py  pestel_score.py  quant_score.py
company_environment_agent/agent7/scripts/: debug_ontology.py  migrate_tsv_contextual.sql
company_environment_agent/agent7/tests/: test_alpha_beta.py  test_commodity.py  test_end_to_end.py  test_flags.py  test_peer_gaps.py  test_quant_score.py  test_regimes.py  test_relative_strength.py  test_returns.py
core_competency_agent/: .env.example  check_db.py  check_tax.py  main.py  pyproject.toml
core_competency_agent/agent/: query_parser.py  run.py
core_competency_agent/config/: peer_map.yaml
core_competency_agent/db/: connection.py
core_competency_agent/layer1/: bundle.py  compute.py  data_loader.py  flags.py  scorer.py
core_competency_agent/layer2/: llm_interpreter.py  prompts.py  tavily_competitive.py  ten_k_moat_retrieval.py
core_competency_agent/models/: intent.py  layer1_output.py  moat_verdict.py
core_competency_agent/scoring/: final_score.py
core_competency_agent/tests/: test_compute.py  test_final_score.py  test_flags.py  test_scorer.py
(+109 files in other folders)
