[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capability_stack_agent"
version = "0.1.0"
description = "Agent 4 — Capability Stack: does this company have the internal engine to keep executing?"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.1",
    "numpy>=1.26",
    "psycopg2-binary>=2.9",
    "anthropic>=0.30",
    "tavily-python>=0.3",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
