[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent7"
version = "0.1.0"
description = "Agent 7 — Company Environment for Torch Investment Management"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.1",
    "numpy>=1.26",
    "statsmodels>=0.14",
    "psycopg2-binary>=2.9",
    "SQLAlchemy>=2.0",
    "anthropic>=0.30",
    "tavily-python>=0.3",
    "pytest>=8.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent7*", "ingestion*", "layer1*", "layer2*", "scoring*", "agent*", "db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
